Update audio button: shorter text with sound icon and better styling

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "slogan": "An African paradise with exceptional biodiversity, where you can enjoy tranquility and taste pure wildlife.",
-        "audio": "For a moment, imagine yourself immersed in the equatorial jungle of Gabon, surrounded by animals! Click the button"
+        "audio": "🔊 Listen to the jungle"
     },
     "navbar": {
         "linkOne": "Our Eco-Village",
