--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "slogan": "Un paraíso africano con una biodiversidad excepcional, donde puedes disfrutar de tranquilidad y experimentar la vida salvaje en su estado más puro",
-        "audio": "Por un instante, imagínate en inmersión en la jungla ecuatorial de Gabón, rodeado de animales. ¡Haz clic en el botón!"
+        "audio": "🔊 Escuchar la jungla"
     },
     "navbar": {
         "linkOne": "Nuestro Eco-Village",
