--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "slogan": "Un paradis africain avec une biodiversité exceptionnelle, au sein duquel vous pourrez jouir d’une tranquillité et goûter la vie sauvage à l’état pur",
-        "audio": "Pour un instant, Imaginez-vous en inmersión dans la jungle equatoriale du Gabon, entourè d'animaux! Clicker sur le bouton"
+        "audio": "🔊 Écouter la jungle"
     },
     "navbar": {
         "linkOne": "Notre Eco-Village",
