Fix French audio button text: Ecoutez le bruit de la jungle

--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "slogan": "Un paradis africain avec une biodiversité exceptionnelle, au sein duquel vous pourrez jouir d’une tranquillité et goûter la vie sauvage à l’état pur",
-        "audio": "🔊 Écouter la jungle"
+        "audio": "🔊 Écoutez le bruit de la jungle"
     },
     "navbar": {
         "linkOne": "Notre Eco-Village",
