Add WhatsApp button and auto language detection
- Convert WhatsApp text to clickable button with translated message
- Add i18next-browser-languagedetector for auto language detection
- Detect user device language and set website language accordingly
- Fallback to French for unsupported languages

--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -338,6 +338,7 @@
         "linkThree": "Los Cuadernos de Viaje de Jean Lou: Parque de LOANGO",
         "linkFour": "Nuestra vida en Gabón",
         "linkFive": "Video sobre el Parque Nacional de Loango (Gabón) - YouTube",
-        "followUs": "Síguenos"
+        "followUs": "Síguenos",
+        "whatsappMessage": "Hola, me gustaría obtener información sobre el Eco-Village de Enamino"
     }
 }
