Change footer title from 'Follow us' to 'Connect with us' in all languages

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -338,7 +338,7 @@
         "linkThree": "Jean Lou's Travel Journals: Loango Park",
         "linkFour": "Our Life in Gabon",
         "linkFive": "Video on Loango National Park (Gabon) - YouTube",
-        "followUs": "Follow Us",
+        "followUs": "Connect with us",
         "whatsappMessage": "Hello, I would like to get information about the Enamino Eco-Village"
     }
 }
