--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -338,7 +338,7 @@
         "linkThree": "Los Cuadernos de Viaje de Jean Lou: Parque de LOANGO",
         "linkFour": "Nuestra vida en Gabón",
         "linkFive": "Video sobre el Parque Nacional de Loango (Gabón) - YouTube",
-        "followUs": "Síguenos",
+        "followUs": "Conéctate con nosotros",
         "whatsappMessage": "Hola, me gustaría obtener información sobre el Eco-Village de Enamino"
     }
 }
