--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -338,7 +338,7 @@
         "linkThree": "Les Carnets de Voyages de Jean Lou : Le Parc de LOANGO",
         "linkFour": "Notre vie au Gabon",
         "linkFive": "Video sur le Parc National de Loango (Gabon) - YouTube",
-        "followUs": "Suivez-nous",
+        "followUs": "Connectez-vous avec nous",
         "whatsappMessage": "Bonjour, je souhaite obtenir des informations sur l'Eco-Village d'Enamino"
     }
 }
